--- a/3DBackendService/Views/Web.config
+++ b/3DBackendService/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="_3DBackendService" />
+        <add namespace="BackendService" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
