--- a/javascript-programming-basics/javascriptJquery.csproj
+++ b/javascript-programming-basics/javascriptJquery.csproj
@@ -316,6 +316,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="SpeakingJavascript\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Account\Web.config" />
